# theseus-api

./: Dockerfile  README.md  stack.yaml  swagger.json  theseus-api.cabal
app/: Main.hs
src/Handler/: Deployments.hs  Ingresses.hs  Myself.hs  Services.hs  Swagger.hs  Users.hs  Volumes.hs
src/Kubernetes/: Deployments.hs  Ingresses.hs  Namespaces.hs  NetworkPolicies.hs  Pods.hs  Services.hs  Settings.hs
src/Model/: Deployments.hs  Ingresses.hs  Logs.hs  Services.hs  Settings.hs  Users.hs  Volumes.hs
src/Theseus/: User.hs
test/: Spec.hs
