name:                theseus-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/theseus-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model.Settings
                     , Model.Users
                     , Handler.Users
                     , Handler.Myself
                     , Kubernetes.Deployments
                     , Model.Deployments
                     , Handler.Deployments
  other-modules:       Kubernetes.Settings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 
                     , aeson
                     , servant-server
                     , wreq
                     , lens-aeson
                     , lens
                     , bytestring
                     , text
                     , transformers

executable theseus-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , theseus-api
                     , base-compat
                     , mtl
                     , attoparsec
                     , bytestring
                     , time
                     , servant
                     , servant-server
                     , string-conversions
                     , http-media
                     , lucid
                     , directory
                     , blaze-html
                     , blaze-markup
                     , wai
                     , wai-extra
                     , warp
                     , wreq


  default-language:    Haskell2010

test-suite theseus-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , theseus-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/theseus-api
